= CHANGELOG

== 0.4 - Roadmap

* https://github.com/ysb33r/ivypot-gradle-plugin/issues/2[Issue #2] - Add support for `repositories.flatDir`.

== 0.3.7

* https://github.com/ysb33r/ivypot-gradle-plugin/issues/10[Issue #11] - Patterns for writing artifacts is now configurable.

== 0.3.6

* https://github.com/ysb33r/ivypot-gradle-plugin/issues/10[Issue #10] - Fixes issues that was suppose to be fixed by https://github.com/ysb33r/ivypot-gradle-plugin/issues/8[Issue #9].
* Compatibility check up to Gradle 2.11

== 0.3.5

* https://github.com/ysb33r/ivypot-gradle-plugin/issues/8[Issue #9] - Cannot use pattern-based Ivy Resolver since Gradle 2.3.

== 0.3.4

* https://github.com/ysb33r/ivypot-gradle-plugin/issues/8[Issue #8] - Transitive dependencies are not copied to local repository.

== 0.3.3 (Avoid this release)

* https://github.com/ysb33r/ivypot-gradle-plugin/issues/7[Issue #7] - When using two `OfflineRepositorySync` tasks, the build fails.

== 0.3.2

* https://github.com/ysb33r/ivypot-gradle-plugin/issues/5[Issue #5] - Don't mix cache data with artifacts.
* https://github.com/ysb33r/ivypot-gradle-plugin/issues/6[Issue #6] - Specifying ivy repositories with only a URL does not work.

== 0.3.1

* Re-releases 0.3.0 with correct plugin id.

== 0.3.0

Initial first release - this had the wrong Gradle plugin id.