@@ -24,7 +24,7 @@ buildscript {
     }
     dependencies {
         classpath "com.gradle.publish:plugin-publish-plugin:0.9.0"
-        classpath 'org.ysb33r.gradle:gradletest:0.5.3'
+        classpath 'org.ysb33r.gradle:gradletest:0.5.5'
         classpath 'gradle.plugin.nl.javadude.gradle.plugins:license-gradle-plugin:0.12.1'
     }
 }
@@ -37,7 +37,7 @@ apply plugin : 'org.ysb33r.gradletest'
 
 apply from: 'gradle/integration-tests.gradle'
 
-version = '0.3.8-SNAPSHOT'
+version = '0.4-SNAPSHOT'
 group = 'org.ysb33r.gradle'
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -67,6 +67,11 @@ dependencies {
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.3', {
         exclude module : 'groovy-all'
     }
+    testCompile( 'com.athaydes:spock-reports:1.2.10' ) {
+        transitive = false // this avoids affecting your version of Groovy/Spock
+    }
+    testCompile 'org.slf4j:slf4j-api:1.7.13'
+    testCompile 'org.slf4j:slf4j-simple:1.7.13'
 }
 
 integrationTest {
